job recomendation being added

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # SerpAPI (Google Search) – https://serpapi.com/
 SERPAPI_KEY=
 
-# OpenAI (for extraction)
+# OpenAI (for extraction and optional embeddings)
 OPENAI_API_KEY=
 MODEL_NAME=gpt-4o-mini
+
+# Embeddings: sentence_transformers (default, local) or openai
+EMBEDDING_PROVIDER=sentence_transformers
+SENTENCE_TRANSFORMERS_MODEL=all-MiniLM-L6-v2
+# OPENAI_EMBEDDING_MODEL=text-embedding-3-small
