--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ python-dotenv>=1.0.0
 beautifulsoup4>=4.12.0
 serpapi>=0.1.0
 openai>=1.0.0
+pdfplumber>=0.10.0
+python-docx>=1.0.0
+sentence-transformers>=2.2.0
+faiss-cpu>=1.7.0
+numpy>=1.24.0
