--- a/job_signal_ai/requirements.txt
+++ b/job_signal_ai/requirements.txt
@@ -1,5 +1,6 @@
 streamlit>=1.28.0
-httpx>=0.25.0,<0.28.0
+# Pin <0.28: OpenAI client passes 'proxies' to AsyncClient, removed in httpx 0.28
+httpx==0.27.2
 pydantic>=2.0.0
 python-dotenv>=1.0.0
 beautifulsoup4>=4.12.0
